--- a/style.css
+++ b/style.css
@@ -44,11 +44,12 @@ h1{
 
 .main-text{
     padding-top: 30px;
-    width: 360px;
+    width: 400px;
     display: inline-block;
 }
 
 .main-text p{
+    font-size: 18px;
     color: #e5e7eb;
 }
 
@@ -107,6 +108,8 @@ h1{
 
 .imgs p{
     text-align: left;
+    font-size: 18px;
+    color: #1f2937;
 }
 
 .imgs .image1,.image2,.image3,.image4{
@@ -130,7 +133,56 @@ h1{
 }
 
 .section-3 span{
-    font-weight: bold;
+    font-size: 24px;
+    color: #1f2937;
+    font-weight: bolder;
     float: right;
     padding-right: 290px;
+}
+
+
+.section-4{
+    height: 350px;
+}
+
+.section-4 .c2a{
+    width: 950px;
+    background-color: #3882f6;
+    color: #e5e7eb;
+    border-radius: 10px;
+    padding: 30px;
+    position: absolute;
+    left: 170px;
+    top: 1440px;
+}
+
+.c2a span{
+    font-size: 25px;
+    font-weight: bolder;
+}
+
+.section-4 h3{
+    font-size: 18px;
+    padding-left: 70px;
+}
+
+.section-4 .btn{
+    border: 2px solid #e5e7eb;
+    float: right;
+    position: relative;
+    top: 155px;
+    right: 260px;
+}
+
+.footer{
+    background-color: #1f2937;
+    height: 90px;
+}
+
+.footer p{
+    color: #e5e7eb;
+    font-size: 17px;
+    font-weight: 500;
+    text-align: center;
+    padding-top: 40px;
 }
